added get contributors from github repo

--- a/src/Firebase/.env
+++ b/src/Firebase/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_KEY=AIzaSyBv8OB1uIFqql1SsG7ENgGqlmoLPY3FhZI
 REACT_APP_AUTH_DOMAIN=b-e-v-776af.firebaseapp.com
 REACT_APP_PROJECT_ID=b-e-v-776af
+
+github access token: 57c063f3de3f3d6b1c6d4835444c8e39db391a45
