--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.0",
     "chart.js": "^2.9.4",
     "firebase": "^8.3.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
