--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "@typescript-eslint/visitor-keys": "^4.21.0",
     "chart.js": "^2.9.4",
     "firebase": "^8.3.0",
     "moment": "^2.29.1",
