--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipe": "^6.0.4",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.31.0",
     "web-vitals": "^1.1.0"
